Fix for columns

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -584,33 +584,24 @@ main modal. They basically override bootstrap styling for these components
 @media (max-width: 1199px) {
   .project-details-table .project-details-column {
     width: 100% !important;
-    margin: 15px 0 !important;
+    margin: 7px !important;
   }
 
   .project-details-table .project-details-item {
     float: none !important;
-    width: 260px !important;
+    width: 256px !important;
     margin: 0 auto !important;
   }
 }
 
 .project-details-table .project-details-column {
   flex: 1 1 45%;
-  margin: 5px 0;
-  width: 50%;
-}
-
-.project-details-table .project-details-left-column {
-  margin-right: 15px;
-}
-
-.project-details-table .project-details-right-column {
-  margin-left: 15px;
+  margin: 7px 10px;
+  width: 45%;
 }
 
 .project-details-table .project-details-item {
-  min-width: 260px;
-  margin-top: 15px;
+  min-width: 256px;
 }
 
 .project-details-table .project-details-left-column .project-details-item {
