Adds 10 more pixels to gutter if window width 1290px ore more

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -581,6 +581,12 @@ main modal. They basically override bootstrap styling for these components
   flex-wrap: wrap;
 }
 
+@media (min-width: 1290px) {
+  .project-details-table .project-details-column {
+    margin: 7px 15px !important;
+  }
+}
+
 @media (max-width: 1199px) {
   .project-details-table .project-details-column {
     width: 100% !important;
