--- a/public/styles.css
+++ b/public/styles.css
@@ -1,6 +1,5 @@
 
 :root {
-
   --accent-color: #2196F3;
   --accent-color-light: #44C6FF;
   --accent-color-dark: #19579E;
@@ -21,7 +20,46 @@
   --background-color-dark: #333333;
 
   --border-color: #CCCCCC;
+}
 
+@font-face {
+  font-family: Noto Sans;
+  src: url(./fonts/NotoSans-Regular.ttf);
+  font-weight: normal;
+}
+@font-face {
+  font-family: Noto Sans;
+  font-style: italic;
+  src: url(./fonts/NotoSans-Italic.ttf);
+}
+@font-face {
+  font-family: Noto Sans;
+  font-weight: bold;
+  src: url(./fonts/NotoSans-Bold.ttf);
+}
+
+@font-face {
+  font-family: Noto Sans;
+  font-style: italic;
+  font-weight: bold;
+  src: url(./fonts/NotoSans-BoldItalic.ttf);
+}
+
+/*
+special font for Hebrew
+*/
+@font-face {
+  font-family: Ezra;
+  src: url(./fonts/SILEOTSR.ttf);
+  font-weight: normal;
+  unicode-range: U+0590-05FF;
+}
+
+/*
+  use Ezra for Hebrew characters and then Noto Sans for other characters
+*/
+ * {
+  font-family: Ezra, Noto Sans;
 }
 
 #scrollableSection {
