--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -122,23 +122,23 @@ use Ezra for Hebrew characters and then Noto Sans for other characters
 }
 
 .Padauk-text {
-  font-family: Padauk, sans-serif;
-  font-size: 150%;
+  font-family: Padauk, Noto Sans;
+  font-size: 130%;
   font-feature-settings: "wtri" 1;
 }
 
 .AwamiNastaliq-text {
-  font-family: AwamiNastaliq, sans-serif;
+  font-family: AwamiNastaliq, Noto Sans;
   font-feature-settings: "hehk" 0, "hedo" 1, "cv78" 2, "hamz" 1, "shrt" 1;
-  font-size: 200%;
+  font-size: 140%;
   direction: rtl;
   text-align: right;
 }
 
 .Scheherazade-text {
-  font-family: Scheherazade, sans-serif;
+  font-family: Scheherazade, Noto Sans;
   font-feature-settings: "cv12" 0;
-  font-size: 200%;
+  font-size: 150%;
   direction: rtl;
   text-align: right;
 }
